# THERMUS

./: .gitignore  README.md  roadmap.md
.github/workflows/: cmake-macos-13-no-doc.yml  cmake-macos-14-large-no-doc.yml  cmake-macos-14-no-doc.yml  cmake-macos-no-doc.yml  cmake-ubuntu-22.04-no-doc.yml  cmake-ubuntu-24.04-no-doc.yml  cmake-ubuntu-no-doc.yml  linter.yml  root-install-ubuntu-24.04.yml  root-src-install-ubuntu-24.04.yml
main/: TTMParticleSet.cxx  TThermalFitBSQ.cxx  TThermalFitBSQ.h
test/: prediction.C
tests/: all_predictions.C  dev_test.sh  inplace_test.sh  lhc5020_fit_charm.C
tests/expected_results/: CMakeLists.txt  current_fit_lhc5020_fit_test.txt  current_fit_lhc5020_fit_test_arm.txt  result_1.txt
